[+] get constants for fields
